feat : function code